<resources>
    <string name="app_name">hayati DeliveryMan App</string>
    <string name="msg_error_connection">Error in connection</string>
    <string name="msg_something_error">Something went wrong</string>
    <string name="msg_server_error">An error occurred, please try again</string>
    <string name="no_internet">Please make sure you connect to the Internet</string>
    <string name="empty_error_msg">Please, Enter your</string>
    <string name="email_validation_error_msg">Email is incorrect</string>
    <string name="phone_validation_error_msg">Mobile number is incorrect</string>
    <string name="phone_or_email_validation_error_msg">Email Address or mobile number is incorrect</string>
    <string name="name_validation_error_msg">Name must be complete </string>
    <string name="confirm_pass_validation_error_msg">Password didn\'t Match</string>
    <string name="pass_validation_error_msg">Password must be at least 8 characters</string>
    <string name="skip">Skip</string>
    <string name="notification">Notification</string>
    <string name="be_connected_description">Be connected description</string>
    <string name="splash_text">hayati is one of the Saudi Restaurants Companies</string>
    <string name="next">Next</string>
    <string name="welcome_delivery_man">Welcome to the hayati Application for Orders Delivery</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">password</string>
    <string name="forget_password">Forget password !</string>
    <string name="login">login</string>
    <string name="main_home">Home page</string>
    <string name="statics">Statics</string>
    <string name="incoming_requests">Incoming requests</string>
    <string name="Orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="personal_profile">Personal Profile</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="Setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="current_orders">Current Orders</string>
    <string name="previous_orders">Previous Orders</string>
    <string name="cancelled_orders">Cancelled Orders</string>
    <string name="all_orders">All Orders</string>
    <string name="order_details">Order Details</string>
    <string name="order_information">Order Informations</string>
    <string name="order_number">Order Number</string>
    <string name="total_price">Total Price</string>
    <string name="order_date">Order Date</string>
    <string name="status">Order Status</string>
    <string name="order">Order</string>
    <string name="update_status">Update Order Status</string>
    <string name="quantity">Quantity</string>
    <string name="order_pay_status">Order status</string>
    <string name="pay_way">Pay way</string>
    <string name="add_comment_on_order">Add comment to order</string>
    <string name="client_details">Client informations</string>
    <string name="client_name">Client name</string>
    <string name="address">Address</string>
    <string name="search_for_google_maps">Open The Location On Google Map</string>
    <string name="change_status">Update Status </string>
    <string name="update">Update</string>
    <string name="delivery_done">Delivered</string>
    <string name="exit_order">Cancel order</string>
    <string name="choose_order_status">Please Select Order Status</string>
    <string name="order_done_successfully">Successfully Updated</string>
    <string name="new_noti">New Notifcaiton</string>
    <string name="change_persoanl_photo">Change Personal Photo</string>
    <string name="name">Name</string>
    <string name="update_information">Update Information</string>
    <string name="email">Email Address</string>
    <string name="profile_updated_successfully">Profile Updated Successfully</string>
    <string name="photo_updated_successfully">Updated Successfully</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="order_hash">order #</string>
    <string name="rs">RS</string>
    <string name="reason_for_cancel">Please mention the reason for canceling the order</string>
    <string name="notifications">Notifications</string>
    <string name="activate_receive_notifications">Enable Notification Alert</string>
    <string name="active">Active</string>
    <string name="activate_notification_sound">Enable Notifications Sound</string>
    <string name="change_language">Change language</string>
    <string name="change_app_language">Default app language</string>
    <string name="setting">Settings</string>
    <string name="password_updated_successfully">Password Updated Successfully</string>
    <string name="please_enter_all_required_fields">Please fill in all required fields</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">New password Confirmation</string>
    <string name="confirm">Confirm</string>
    <string name="old_password">Old password</string>
    <string name="back">Back</string>
    <string name="are_you_forget_password">Are you forget password ?</string>
    <string name="send">Send</string>
    <string name="done_ok">Done</string>
    <string name="enter_your_new_password">Enter Your new password</string>
    <string name="activate_account">Activate Account</string>
    <string name="verify_account">Verify Account</string>
    <string name="confirm_activation">Confirm Activation</string>
    <string name="return_send_code">Resend Code</string>
    <string name="_50_5525">A message with an activation code was sent to the phone number that ends at</string>
    <string name="code_not_correct">Code not correct</string>
    <string name="resend_again">Resend Again</string>
    <string name="arrived">Arrived</string>
    <string name="new_order">New Order</string>
    <string name="delivered">Delivered</string>
    <string name="cancelled">Cancelled</string>
    <string name="accept_status">Accept</string>
    <string name="verify_with_email">Verify With Email</string>
    <string name="Subscriptions">Subscriptions</string>

    <array name="genderArray">
        <item>Male</item>
        <item>Female</item>
    </array>

</resources>
