<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activities.main.MainActivity">

    <data>
        <variable
            name="viewModel"
            type="com.beetleware.hayatiDeliveryMan.ui.activities.main.MainViewModel"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
       >

        <fragment
            android:id="@+id/navHostFragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_navigation"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="1dp"
            android:orientation="horizontal"
            app:defaultNavHost="true"
            app:navGraph="@navigation/navigation_main" />


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/native_bottom_nav"
            android:layout_alignParentBottom="true"
            app:menu="@menu/navigation_bottom_home" />


        <com.gauravk.bubblenavigation.BubbleNavigationLinearView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:padding="12dp">

            <com.gauravk.bubblenavigation.BubbleToggleView
                android:id="@+id/l_item_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:bt_active="true"
                app:bt_colorActive="@color/colorAccent"
                app:bt_colorInactive="@color/bottom_inactive"
                app:bt_icon="@drawable/ic_home"
                app:bt_shape="@drawable/transition_background_drawable_home"
                app:bt_title="@string/main_home" />

            <com.gauravk.bubblenavigation.BubbleToggleView
                android:id="@+id/l_item_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:bt_colorActive="@color/colorAccent"
                app:bt_colorInactive="@color/bottom_inactive"
                app:bt_icon="@drawable/ic_vespa"
                app:bt_shape="@drawable/transition_background_drawable_home"
                app:bt_title="@string/Orders" />

            <com.gauravk.bubblenavigation.BubbleToggleView
                android:id="@+id/l_item_profile_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:bt_colorActive="@color/colorAccent"
                app:bt_colorInactive="@color/bottom_inactive"
                app:bt_icon="@drawable/ic_profile"
                app:bt_shape="@drawable/transition_background_drawable_home"
                app:bt_title="@string/profile" />

        </com.gauravk.bubblenavigation.BubbleNavigationLinearView>

    </RelativeLayout>



</layout>
