<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.beetleware.hayatiDeliveryMan.ui.fragments.orders.OrdersViewModel" />
    </data>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_choose_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/space_15"
            android:fontFamily="@font/questive_bold"
            android:text="فلتر"
            android:textColor="@android:color/black"
            android:textSize="@dimen/x16sp" />


        <ImageView
            android:id="@+id/close"
            style="@style/clickable_view_border"
            android:tint="@android:color/black"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/space_15"
            android:src="@drawable/ic_baseline_close_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/container_for_top"
            android:gravity="center_horizontal"
            android:layout_below="@id/close"
            android:layout_marginTop="@dimen/space_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                style="@style/clickable_view_border"
                android:layout_weight="1"
                android:id="@+id/container_for_all_order"
                android:layout_margin="@dimen/space_10"
                app:cardCornerRadius="@dimen/space_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/right"
                    android:layout_gravity="end"
                    android:background="@drawable/ic_background_radius"
                    android:padding="@dimen/space_10"
                    android:src="@drawable/ic_selected"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_all_orders"
                    android:padding="@dimen/x40dp"
                    android:textColor="@android:color/black"
                    android:text="@string/all_orders"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/container_for_current_orders"
                style="@style/clickable_view_border"
                android:layout_weight="1"
                android:layout_margin="@dimen/space_10"
                app:cardCornerRadius="@dimen/space_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/right2"
                    android:layout_gravity="end"
                    android:background="@drawable/ic_background_radius"
                    android:padding="@dimen/space_10"
                    android:src="@drawable/ic_selected"
                    android:layout_width="wrap_content"
                    android:visibility="gone"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_current_orders"
                    android:padding="@dimen/x40dp"
                    android:textColor="@android:color/black"
                    android:text="@string/current_orders"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_for_bottom"
            android:gravity="center_horizontal"
            android:layout_below="@id/container_for_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/container_for_previous_order"
                style="@style/clickable_view_border"
                android:layout_weight="1"
                android:layout_margin="@dimen/space_10"
                app:cardCornerRadius="@dimen/space_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/right3"
                    android:layout_gravity="end"
                    android:background="@drawable/ic_background_radius"
                    android:padding="@dimen/space_10"
                    android:src="@drawable/ic_selected"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_previous_order"
                    android:padding="@dimen/x40dp"
                    android:textColor="@android:color/black"
                    android:text="@string/previous_orders"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/container_for_cancelled_orders"
                style="@style/clickable_view_border"
                android:layout_weight="1"
                android:layout_margin="@dimen/space_10"
                app:cardCornerRadius="@dimen/space_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/right4"
                    android:layout_gravity="end"
                    android:background="@drawable/ic_background_radius"
                    android:padding="@dimen/space_10"
                    android:src="@drawable/ic_selected"
                    android:layout_width="wrap_content"
                    android:visibility="gone"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_cancelled_order"
                    android:padding="@dimen/x40dp"
                    android:textColor="@android:color/black"
                    android:text="@string/cancelled_orders"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </RelativeLayout>
</layout>
